fix the yaml syntax

--- a/circle.yml
+++ b/circle.yml
@@ -15,16 +15,16 @@ dependencies:
     - go get github.com/aktau/github-release
 
   override:
-    - glide install
+    - glide install:
         pwd:
           $GOPATH/src/github.com/${CIRCLE_PROJECT_USERNAME}
-    - go get -t -d -v ./... || echo 'go get failed'
+    - go get -t -d -v ./... || echo 'go get failed':
         pwd:
           $GOPATH/src/github.com/${CIRCLE_PROJECT_USERNAME}
    
 test:
   override:
-    - go test -race -v
+    - go test -race -v:
         pwd:
           $GOPATH/src/github.com/${CIRCLE_PROJECT_USERNAME}
  
