fix variable close bracket

--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,7 @@ dependencies:
 
   override:
     - "cd $GOPATH/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME} && glide install"
-    - "cd $GOPATH/src/github.com/${CIRCLE_PROJECT_USERNAME/${CIRCLE_PROJECT_REPONAME} && go get -t -d -v ./... || echo 'go get failed'"
+    - "cd $GOPATH/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME} && go get -t -d -v ./... || echo 'go get failed'"
           
 test:
   override:
